FIX - navbar z-index

--- a/css/main.css
+++ b/css/main.css
@@ -765,5 +765,6 @@ img {
     position: sticky;
     top: 0;
     left: 0;
+    z-index: 999;
   }
 }
